docs: update benchmark results and fix run instructions
Replace stale numbers with fresh JMH run (FFM +50% reads, +38% batch
writes, +13% writes vs JNI). Replace broken jar invocation with direct
class invocation using the test classpath.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>